--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
   <meta name="description" content="PhD Candidate">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://renebidart.github.io/404.html">
+  <link rel="alternate" hreflang="en-us" href="https://renebidart.com/404.html">
 
   
 
@@ -256,7 +256,7 @@
   <link rel="icon" type="image/png" href="/images/icon_hu5e15e861ad43a166b29f0ae919c910d4_1675_32x32_fill_lanczos_center_2.png">
   <link rel="apple-touch-icon" type="image/png" href="/images/icon_hu5e15e861ad43a166b29f0ae919c910d4_1675_192x192_fill_lanczos_center_2.png">
 
-  <link rel="canonical" href="https://renebidart.github.io/404.html">
+  <link rel="canonical" href="https://renebidart.com/404.html">
 
   
   
@@ -270,7 +270,7 @@
   <meta property="twitter:card" content="summary">
   
   <meta property="og:site_name" content="Academic">
-  <meta property="og:url" content="https://renebidart.github.io/404.html">
+  <meta property="og:url" content="https://renebidart.com/404.html">
   <meta property="og:title" content="404 Page not found | Academic">
   <meta property="og:description" content="PhD Candidate"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
   <meta property="twitter:image" content="img/map[gravatar:%!s(bool=false) shape:circle]"><meta property="og:locale" content="en-us">
