--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="description" content="PhD Candidate">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://renebidart.github.io/">
+  <link rel="alternate" hreflang="en-us" href="https://renebidart.com/">
 
   
 
@@ -258,7 +258,7 @@
   <link rel="icon" type="image/png" href="/images/icon_hu5e15e861ad43a166b29f0ae919c910d4_1675_32x32_fill_lanczos_center_2.png">
   <link rel="apple-touch-icon" type="image/png" href="/images/icon_hu5e15e861ad43a166b29f0ae919c910d4_1675_192x192_fill_lanczos_center_2.png">
 
-  <link rel="canonical" href="https://renebidart.github.io/">
+  <link rel="canonical" href="https://renebidart.com/">
 
   
   
@@ -272,7 +272,7 @@
   <meta property="twitter:card" content="summary">
   
   <meta property="og:site_name" content="Academic">
-  <meta property="og:url" content="https://renebidart.github.io/">
+  <meta property="og:url" content="https://renebidart.com/">
   <meta property="og:title" content="Academic">
   <meta property="og:description" content="PhD Candidate"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
   <meta property="twitter:image" content="img/map[gravatar:%!s(bool=false) shape:circle]"><meta property="og:locale" content="en-us">
@@ -288,10 +288,10 @@
   "@type": "WebSite",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "https://renebidart.github.io?q={search_term_string}",
+    "target": "https://renebidart.com?q={search_term_string}",
     "query-input": "required name=search_term_string"
   },
-  "url": "https://renebidart.github.io"
+  "url": "https://renebidart.com"
 }
 </script>
 
