--- a/index.html
+++ b/index.html
@@ -635,8 +635,7 @@
     
     <h1>Biography</h1>
 
-    <h2 id="current">Current</h2>
-<p>I’m a PhD candidate at the University of Waterloo in Systems Design Engineering under Alex Wong. Currently working on on unsupervised learning of disentangled representations.</p>
+    <h2 id="current-in-systems-design-engineering-supervised-by-alexander-wong-currently-working-on-on-unsupervised-learning-of-disentangled-representations">Current in Systems Design Engineering supervised by Alexander Wong. Currently working on on unsupervised learning of disentangled representations.</h2>
 <p>Recently did an internship at Shell Street labs using deep learning for finance, and still have some leftover interest in economics.</p>
 <h2 id="future">Future</h2>
 <p>I’ll be working as an applied research scientist at Amazon in Vancouver this summer.</p>
